--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -36,4 +37,3 @@
     "vite": "^4.4.5"
   }
 }
-
