--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["npm install --production=false"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npx vite preview --host 0.0.0.0 --port $PORT"
+cmd = "npx serve dist -s -l $PORT"
 
